<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Cardapio Online</string>
    <string name="txt_name_food">Picanha 500g</string>
    <string name="txt_price_item">R$ 0.0</string>
    <string name="desc_menu_item">Picanha no kilo, acompanhada de arroz branco, farofa e vinagrete</string>
    <string name="add_food">+</string>
    <string name="txt_final_price">Valor Final</string>
    <string name="checkout">Finalizar pedido</string>
    <string name="txt_total_value">157,00</string>
    <string name="validation_all_fields">Preencha todos os campos</string>
    <string name="footer_text">R$ 0,00</string>
    <string name="input_name">Digite o nome do Prato</string>
    <string name="input_description">Insira uma descrição...</string>
    <string name="input_price">Valor: 00.00</string>
    <string name="input_food_button">Cadastrar</string>
    <string name="toolbar_input_food">Cadastrar Produto</string>
    <string name="btn_clear">Limpar Tudo</string>
    <string name="txt_edit_qtd">1</string>
    <string name="txt_lunch">Comidas</string>
    <string name="txt_drinks">Bebidas</string>
    <string name="txt_checkout">Finalizar pedido</string>
    <string name="txt_register_name_food">Nome do produto</string>
    <string name="txt_register_desc_food">Descrição</string>
    <string name="txt_register_price_food">Preço </string>
    <string name="txt_register_img_food">Envio de Imagem</string>
    <string name="txt_hint_food_name">Digite o nome do produto</string>
    <string name="txt_hint_food_desc">Digite a Descrição do produto</string>
    <string name="txt_hint_food_price">Digite o Preço do produto</string>
    <string name="txt_hint_food_img">Selecione uma imagem</string>
    <string name="txt_register_button">Cadastrar produto</string>
    <string name="list_all_category">Selecione uma categoria</string>
    <string name="title_activity_login">LoginActivity</string>
    <!--    Tela de Login-->
    <string name="login_title">Login do cliente</string>
    <string name="login_name">Nome</string>
    <string name="login_email">Email</string>
    <string name="login_password">Digite sua senha</string>
    <string name="login_forgot">Esqueci minha senha</string>
    <string name="login_btn">Entrar</string>
    <string name="login_register">Não tem cadastro ainda?</string>
    <string name="login_register_new_btn">Cadastre-se</string>
    <string name="login_register_btn">Cadastrar</string>
    <string name="register_title">Cadastro de Usuário</string>

    <!--    Tela de Categorias-->
    <string name="categories_input">Digite o nome da Categoria</string>
    <string name="categories_title">Cadastre a categoria do produto</string>
</resources>