<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/orange"
        tools:context=".ui.activity.RegisterLoginActivity">

        <ImageView
            android:id="@+id/logo_register"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="70dp"
            android:src="@drawable/logo_branco"
            app:layout_constraintBottom_toTopOf="@+id/txt_app_name_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_app_name_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo_register" />

        <ImageView
            android:id="@+id/bg_login"
            android:layout_width="330dp"
            android:layout_height="380dp"
            android:background="@drawable/rounded_main"
            android:backgroundTint="#DFFFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_app_name_login" />

        <ImageView
            android:id="@+id/bg_login_title"
            android:layout_width="330dp"
            android:layout_height="60dp"
            android:background="@drawable/rounded_main_title"
            android:backgroundTint="#FFFFFF"
            app:layout_constraintEnd_toEndOf="@+id/bg_login"
            app:layout_constraintStart_toStartOf="@+id/bg_login"
            app:layout_constraintTop_toTopOf="@+id/bg_login" />

        <TextView
            android:id="@+id/txt_register_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/be_vietnam"
            android:text="@string/register_title"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/orange_black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/bg_login_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/bg_login_title" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_name"
            style="?attr/textInputOutlinedStyle"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:hint="@string/login_name"
            app:boxBackgroundColor="#C8FFFFFF"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:layout_constraintBottom_toTopOf="@id/txt_register_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_register_title"
            app:startIconDrawable="@drawable/ico_name_login">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_name_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_register_email"
            style="?attr/textInputOutlinedStyle"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:hint="@string/login_email"
            app:boxBackgroundColor="#C8FFFFFF"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:layout_constraintBottom_toTopOf="@id/txt_register_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_name"
            app:startIconDrawable="@drawable/ico_login_mail">

            <com.google.android.material.textfield.TextInputEditText

                android:id="@+id/input_email_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_register_password"
            style="?attr/textInputOutlinedStyle"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:hint="@string/login_password"
            app:boxBackgroundColor="#C8FFFFFF"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:endIconMode="password_toggle"
            app:layout_constraintBottom_toTopOf="@id/register_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_register_email"
            app:startIconDrawable="@drawable/ico_password"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_password_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_button"
            android:layout_width="220dp"
            android:layout_height="52dp"
            android:text="@string/login_register_btn"
            android:textAllCaps="true"
            android:textSize="16sp"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/bg_login"
            app:layout_constraintEnd_toEndOf="@+id/bg_login"
            app:layout_constraintStart_toStartOf="@+id/bg_login"
            app:layout_constraintTop_toBottomOf="@+id/txt_register_password" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>
