<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.activity.CategoriesActivity">

    <include
        android:id="@+id/toolbarCategories"
        layout="@layout/toolbar" />

    <ImageView
        android:id="@+id/logo_categories_register"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/logo_branco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarCategories" />

    <TextView
        android:id="@+id/txt_app_name_categories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_categories_register" />



    <ImageView
        android:id="@+id/bg_register_Categories"
        android:layout_width="330dp"
        android:layout_height="250dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_main"
        android:backgroundTint="#DFFFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_app_name_categories" />

    <ImageView
        android:id="@+id/bg_register_Categories_title"
        android:layout_width="330dp"
        android:layout_height="60dp"
        android:background="@drawable/rounded_main_title"
        android:backgroundTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/bg_register_Categories"
        app:layout_constraintStart_toStartOf="@+id/bg_register_Categories"
        app:layout_constraintTop_toTopOf="@+id/bg_register_Categories" />

    <TextView
        android:id="@+id/txt_categories_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categories_title"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/bg_register_Categories_title"
        app:layout_constraintTop_toTopOf="@+id/bg_register_Categories_title" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_categories_register"
        style="?attr/textInputOutlinedStyle"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:hint="@string/categories_input"
        app:hintTextColor="@color/Grey"
        android:layout_marginTop="20dp"
        app:boxBackgroundColor="#C8FFFFFF"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:boxStrokeColor="@color/white"
        app:boxStrokeWidth="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bg_register_Categories_title"
        app:startIconDrawable="@drawable/ico_categories">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_categories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_categories_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/login_register_btn"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="@+id/edt_categories_register"
        app:layout_constraintStart_toStartOf="@+id/edt_categories_register"
        app:layout_constraintTop_toBottomOf="@+id/edt_categories_register" />



</androidx.constraintlayout.widget.ConstraintLayout>